Fixed comment box on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -133,7 +133,7 @@ nav ul li a:hover {
     display: flex;
     flex-direction: column;
     width: 400px;
-    border: 5px dashed #ffb6c1;
+    border: 5px dashed #ff8b9c;
     /* border: 1px solid #ccc; */
     border-radius: 12px;
     padding: 20px;
@@ -154,6 +154,7 @@ nav ul li a:hover {
     color: #007bff;
     text-decoration: none;
     display: inline-block;
+    font-weight: 500;
 }
 
 .post-title:hover {
@@ -451,7 +452,7 @@ footer {
 .eachCmnt {
     background-color: #fff0f5; /* soft pink */
     border: 2px dashed #ffb6c1; /* playful dashed border */
-    max-width: 350px;
+    max-width: 375px;
     padding: 12px 16px;
     margin: 20px 0;
     border-radius: 16px;
@@ -466,6 +467,10 @@ footer {
     margin: 0;
     line-height: 1.6;
     word-wrap: break-word;
+}
+
+.cmntAuthor {
+    font-weight: 600;
 }
 
 @media (max-width: 768px) {
@@ -519,5 +524,16 @@ footer {
     nav ul li {
         margin: 0 1rem;
     }
+
+    .commentDiv ul {
+        margin: 0 auto;
+        padding: 10px;
+        list-style: none;
+}
+
+    .commentForm {
+        right: 50px;
+}
+
     
 }
